sumo/tests/duarouter/trips/errors/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departpos' in definition of a vehicle is empty.
Error: Invalid departpos definition for vehicle ''
Quitting (on error).
